Set up webpack build script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Interactive Web Component for ExoBits NFT",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --progress --config webpack.config.build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +23,11 @@
   "bugs": {
     "url": "https://github.com/mwilber/gz-exobit/issues"
   },
-  "homepage": "https://github.com/mwilber/gz-exobit#readme"
+  "homepage": "https://github.com/mwilber/gz-exobit#readme",
+  "devDependencies": {
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-merge": "^5.8.0"
+  }
 }
