Fix outdated attribute assets

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gz-exobit",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Interactive Web Component for ExoBits NFT",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/mwilber/gz-exobit#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
     "babel-loader": "^8.2.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
